[XHR] Update note about why the readystatechange event is dispatched multiple times in LOADING state

This behavior was needed when progress was not available (see also this
WebKit bug https://bugs.webkit.org/show_bug.cgi?id=7392). Now we have progress
events. Need to resolve inconsistency between our implemenetation and the
spec by fixing either of them.

BUG=

Review URL: https://codereview.chromium.org/25481002

git-svn-id: svn://svn.chromium.org/blink/trunk@158702 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: 40dc2dc996cc95f91e93a2919db34af55f93da87